chore(api-docs): improve spectacular schemas and remove schema errors
